--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/Slides_0.jpg" class="d-block w-100" width="1112px" height="370px" alt="" >
+                    <img src="/images/Slides_0.jpg" class="d-block w-100" width="1112px" height="370px" alt="">
                 </div>
                 <div class="carousel-item">
                     <img src="/images/Slides_1.jpg" class="d-block w-100" width="1112px" height="370px" alt="">
@@ -49,28 +49,28 @@
 </div>
 
 <div class="container d-flex justify-content-center">
-        <div class="row w-85">
-            <!--
-            <tr th:each="recipe : ${recipes}">
-                <div class="col-sm-4">
-                    <div class="card" style="width: 225px;  margin: center;">
-                        <img src="/images/fired_rice.jpg" class="card-img-top" alt="">
-                        <div class="card-body">=
-                            <td th:text="${recipe.title}" class="card-title">Recipe title</td>
-                            <td th:text="${recipe.auther}" class="card-text">Recipe author</td>
-                        </div>
-                        <div class="card-body text-center">
-                            <a href="#" class="card-link">link  </a>
-                            <a href="#" class="card-link">link  </a>
-                            <a href="#" class="card-link">link</a>
-                        </div>
+    <div class="row w-85">
+        <!--
+        <tr th:each="recipe : ${recipes}">
+            <div class="col-sm-4">
+                <div class="card" style="width: 225px;  margin: center;">
+                    <img src="/images/fired_rice.jpg" class="card-img-top" alt="">
+                    <div class="card-body">=
+                        <td th:text="${recipe.title}" class="card-title">Recipe title</td>
+                        <td th:text="${recipe.auther}" class="card-text">Recipe author</td>
+                    </div>
+                    <div class="card-body text-center">
+                        <a href="#" class="card-link">link  </a>
+                        <a href="#" class="card-link">link  </a>
+                        <a href="#" class="card-link">link</a>
                     </div>
                 </div>
-            </tr>
-            -->
+            </div>
+        </tr>
+        -->
 
-            <div class="col-sm-3">
-            <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
+        <div class="col-sm-3 ">
+            <div class="card p-3 shadow-sm" style="color: #C14A4A; width: 225px; ">
                 <img src="/images/fired_rice.jpg" class="card-img-top" alt="">
 
                 <div class="card-body">
@@ -78,58 +78,70 @@
                     <p class="card-text">Author: Zhihao Liang</p>
                 </div>
 
+<!--                <div class="card-body text-center">-->
+<!--                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"-->
+<!--                                                     aria-hidden="true"> </i></a>-->
+<!--                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>-->
+<!--                    </a>-->
+<!--                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>-->
+<!--                    </a>-->
+<!--                </div>-->
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="card" style="color: #C14A4A; width: 225px;">
+                <img src="/images/salad.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Salad</h5>
+                    <p class="card-text">Author</p>
+                </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"
+                                                     aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
         </div>
 
-            <div class="col-sm-3">
-                <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
-                    <img src="/images/salad.jpg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Salad</h5>
-                        <p class="card-text">Author</p>
-                    </div>
-                    <div class="card-body text-center">
-                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                        <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    </div>
+        <div class="col-sm-3">
+            <div class="card" style="color: #C14A4A; width: 225px; ">
+                <img src="/images/oat_pancake.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Oat pancake</h5>
+                    <p class="card-text">Author</p>
+                </div>
+                <div class="card-body text-center">
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"
+                                                     aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
+        </div>
 
-            <div class="col-sm-3">
-                <div class="card" style="color: #C14A4A; width: 225px;  margin: right;">
-                    <img src="/images/oat_pancake.jpg" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Oat pancake</h5>
-                        <p class="card-text">Author</p>
-                    </div>
-                    <div class="card-body text-center">
-                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                        <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    </div>
+        <div class="col-sm-3">
+            <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
+                <img src="/images/lava_cake.png" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Lava cake</h5>
+                    <p class="card-text">Author</p>
+                </div>
+                <div class="card-body text-center">
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"
+                                                     aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
-
-            <div class="col-sm-3">
-                <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
-                    <img src="/images/lava_cake.png" class="card-img-top" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Lava cake</h5>
-                        <p class="card-text">Author</p>
-                    </div>
-                    <div class="card-body text-center">
-                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                        <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    </div>
-                </div>
-            </div>
+        </div>
     </div>
 </div>
 
@@ -143,9 +155,12 @@
                     <p class="card-text">Author</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"
+                                                     aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -158,9 +173,12 @@
                     <p class="card-text">Author: Heran Wang</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"
+                                                     aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -173,9 +191,12 @@
                     <p class="card-text">Author</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"
+                                                     aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -189,10 +210,15 @@
                 </div>
                 <div class="card-body text-center">
                     <div>
-                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                        <a id="light" class="card-link" onclick="changeToSolid(this)" style="display: inline; clear: both; "><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                        <a id="solid" class="card-link" onclick="changeToLight(this)" style="display: none; "><i class="fa fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"
+                                                         aria-hidden="true"> </i></a>
+                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A"
+                                                         aria-hidden="true"></i> </a>
+                        <a id="light" class="card-link" onclick="changeToSolid(this)"
+                           style="display: inline; clear: both; "><i class="far fa-heart" style="color: #C14A4A"
+                                                                     aria-hidden="true"></i> </a>
+                        <a id="solid" class="card-link" onclick="changeToLight(this)" style="display: none; "><i
+                                class="fa fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                     </div>
                 </div>
             </div>
